feat: :sparkles: correccion errores html

--- a/css/variables.css
+++ b/css/variables.css
@@ -7,8 +7,8 @@
     --color-sexto:#2c2b47;
     
     
-    /* --desktop: 1300px;
-    --mobil: 700px; */
+    --desktop: 1300px;
+    --mobil: 700px; 
 
 }
 
